=head1 Krang Changelog

This document contains a list of changes for each release of Krang.



=head2 v1.024 - Under Development

=over

=item *

Upgraded L<IPC::Run> to 0.78, which is now pseudohash-free (later
versions of Perl complain). [Peter]

=item *

Moved htdocs/help/history.html to htdocs/help/log.html to correct links.
[Perrin]

=item *

Updated L<Imager> to 0.43. [Peter]

=item *

Updated L<HTTP::BrowserDetect> to the latest version, 0.98. [Peter]

=item *

Limited the directories being searched by C<bin/krang_install> when
looking to change execute permissions on a newly-installed backup
file.  There was no need to search a number of potentially large
directory trees, this should improve installation times. [Peter]


=item *

Added C<< published => 1 >> argument to L<Krang::Media> C<find()>
method.  Limits returning objects to those that have been published
before.

=back

=head2 v1.023 - August 31, 2004

=over

=item *

Fixed filenaming in C<krang_backup> to use the correct 2-digit month
(old month values were 00-11, not 01-12). [Peter]

=item *

Fixed a bug in L<Krang::Media> where thumbnails of certain images were
causing segfaults.  [Peter]

=item *

Fixed L<Krang::Story>->C<preview_urls()> to return the correct preview
URL for all sites when a story is associated with multiple sites.
[Peter]


=item *

Made L<Krang::Publisher>->C<additional_content_block()> a lot easier
to use from the developer perspective.  Rather than handling the
result of the call, everything is now handled internally.  Overriding
C<publish()> to use C<additional_content_block> is no longer required.
Additionally, it's backwards-compatible with the old way of doing
things, so no need to make changes to your element libraries.  [Peter]


=item *

Fixed symlink bug that caused thumbnails to disappear from the UI
after a Krang instance was moved to a different location on the
filesystem.  [Peter]

=item *

Fixed a bug where deleting a newly-copied story threw an error in the